# openapi.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Dexory API
-  description: A basic API
+  description: Dexory platform api for warehouse tracking
   version: 0.0.1
 servers:
   - url: http://localhost:8080
@@ -9,19 +9,168 @@ servers:
   - url: http://localhost:6000
     description: Production build server
 paths:
-  /test:
-    get:
-      summary: Returns a number
-      description: test endpoint
+  /generate-comparison:
+    post:
+      summary: Generate comparison from the given machine report name and this user report
+      parameters:
+        - name: machine-report-name
+          in: query
+          required: true
+          description: The machine report name to compare the user report with
+          schema:
+            type: string
+      requestBody:
+        required: true
+        description: The csv data for the user report
+        content:
+          text/csv:
+            schema:
+              type: string
       responses:
-        '200':    # status code
-          description: A number
+        '200':
+          description: OK
           content:
             application/json:
-              schema: 
-                $ref: "#/components/schemas/test"
+              schema:
+                $ref: "#/components/schemas/ComparisonReport"
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /machine-reports:
+    post:
+      summary: Uploads a new machine report
+      requestBody:
+        required: true
+        description: The machine report json
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MachineReport"
+      responses:
+        '201':
+          description: Created
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+    get:
+      summary: Get the list of machine reports
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/MachineReport"
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+
+
 components:
+  responses:
+    NotFound:
+      description: Resource not found
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ErrorMessage"
+    BadRequest:
+      description: Invalid Request
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ErrorMessage"
+    InternalServerError:
+      description: Internal server error
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ErrorMessage"
+
+
   schemas:
-    test:
-      type: integer
+    ErrorMessage:
+      type: object
+      properties:
+        message:
+          type: string
+      required:
+        - message
+    MachineReport:
+      description: A warehouse report generated by a machine, containing location information
+      type: array
+      items:
+        type: object
+        title: LocationScan
+        description: Information about a specific location scanned by a machine
+        properties:
+          name:
+            type: string
+            description: Name of the location
+          scanned:
+            type: boolean
+            description: Indicates if the location was scanned
+          occupied:
+            type: boolean
+            description: Indicates if the location is occupied
+          detected_barcodes:
+            type: array
+            description: List of detected barcodes in this location
+            items:
+              type: string
+        required:
+          - name
+          - scanned
+          - occupied
+          - detected_barcodes
+
+    ComparisonReport:
+      description: A report comparing a machine report to a user report
+      type: array
+      items:
+        type: object
+        title: LocationComparison
+        properties:
+          name:
+            type: string
+            description: The name of the location
+          scanned:
+            type: boolean
+            description: Whether or not the location was successfully scanned
+          occupied:
+            type: boolean
+            description: Whether or not the location was occupied
+          expected_barcodes:
+            type: array
+            description: The barcodes that were expected to be found in this location
+            items:
+              type: string
+          detected_barcodes:
+            type: array
+            description: The barcodes that were actually found in this location
+            items:
+              type: string
+          status:
+            type: string
+            description: The status resulting from the comparison
+            enum:
+              - Empty, as expected
+              - Empty, but it should have been occupied
+              - Occupied by the expected items
+              - Occupied by the wrong items
+              - Occupied by an item, but should have been empty
+              - Occupied, but no barcode could be identified
+        required:
+          - name
+          - scanned
+          - occupied
+          - expected_barcodes
+          - detected_barcodes
+          - status
+
     
